dvisvgm-3.4 (2024-07-24)
- option --embed-bitmaps is now also applied to images included with special
  dvisvgm:img
- added macro {?cmyk(c,m,y,k)} to allow for directly specifying CMYK colors
  in literal SVG fragments
- extended dvips color specials to distinguish between fill and stroke colors
- added color special "color set" to replace the current color without pushing
  a new value onto the color stack
- added macros {?fillcolor} and {?strokecolor} to retrieve the current fill and
  stroke color, respectively. Former macro {?color} equals {?fillcolor} and is
  still available too
- replaced millimeter units with big point (bp) units in the message showing
  the extent of generated SVG file
- fixed the detection of MIME types depending of file name suffixes
- several small code improvements

dvisvgm-3.3 (2024-04-10)
- added file dvisvgm.map to the default font map files being looked up
- added evaluation of #include and #includefirst present in font map files
- changed conversion of CMYK colors to RGB so that the resulting colors are
  now similar to those created by Ghostscript and several PDF viewers
- fixed invalid bounding boxes assigned when converting multiple DVI pages
  (GH issue #268)
- fixed computation of internal Coons tensor points
- updated bundled Google Test to version 1.12.1

dvisvgm-3.2.2 (2024-03-07)
- fixed the extraction of bitmaps from PS/EPS files that no longer worked
  since Ghostscript 10.02.1 due to the removal of GS-specific operators
  (GH issue #264)
- minor automake updates required for TeX Live builds

dvisvgm-3.2.1 (2024-02-29)
- delayed loading of Ghostscript library to speed up the conversion of
  DVI files	without PS specials (GH issue #262)
- some improvements required for TeX Live builds
  (patches by Karl Berry, GH issues #259, #260)
- added more details to some DVI warning messages
- added some further information to the manual page

dvisvgm-3.2 (2024-01-11)