@@ -1,4 +1,4 @@
-version: 3.4-{build}
+version: 3.4.1-{build}
 configuration: Release
 
 image: Visual Studio 2022
