@@ -26,7 +26,3 @@ Peter Selinger
 	libs/potrace/*
 	http://potrace.sourceforge.net
 
-George Williams
-	libs/ff-woff/*
-	https://github.com/fontforge/fontforge
-
