@@ -1,7 +1,7 @@
 #include <winver.h>
 
-#define DVISVGM_VERSION 3,4,0,0
-#define DVISVGM_VERSION_STR "3.4\0"
+#define DVISVGM_VERSION 3,4,1,0
+#define DVISVGM_VERSION_STR "3.4.1\0"
 
 VS_VERSION_INFO  VERSIONINFO
   FILEVERSION    DVISVGM_VERSION
